# CherryEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  build.py  build_and_run.py
core/: Application.cpp  application.cpp  application.h  main.cpp  window.cpp  window.hpp
core/components/: benchmark_component.h  debug_assert_component.h  debug_logger_component.h  heap_memory_track_component.h  log_categories.h  release_logger_component.h  stack_memory_track_component.h
core/input/: input_manager.cpp  input_manager.h
core/project_definitions/: cpp_standard.txt  debug_mode_definitions.h  project_definitions.h
core/render/: basic_shader.h  basic_texture.cpp  basic_texture.h  renderer.cpp  renderer.h  renderer2D.cpp  renderer2D.h  vertex_shader.glsl
core/resourse_manager/: .resourse_manager.cpp.swp  resourse_manager.cpp
core/thread_pool/: thread_pool.hpp
game/: CMakeLists.txt  game.cpp  game.h
include/: Singleton.h  resource_manager.h
runtime/: CMakeLists.txt  runtime.cpp  runtime.h
sandbox/algorithms/: array_algorithms.h  string_algorithms.h
sandbox/data_structures/: heap.hpp  queue.hpp  readme.txt  unordered_map.h
sandbox/design_patterns/strategy_pattern_csv_parser/: csv_reader.h  example_csv.csv  operation_strategy.h
src/: main.cpp
src/algorithms/: array_algorithms.h  graph_algorithms.h  linked_list_algorithms.h  sorting_algorithms.h  tree_algorithms.h
src/components/: benchmark_component.h  debug_assert_component.h  debug_logger_component.cpp  debug_logger_component.h  heap_memory_track_component.h  log_categories.h  log_categories_component.cpp  memory_track_component.h  release_logger_component.h  stack_memory_track_component.h  unit_test_component.h
src/data_structures/: bitree.hpp  deque.hpp  linkedList.hpp  readme.txt  stack.hpp  tries.hpp  unordered_map.hpp  vector.h  vector.hpp
src/design_patterns/strategy_pattern_csv_parser/: main.cpp  operation_context.h  parsing.rar
src/engine/: Application.cpp  Application.h  main.cpp
src/engine/thread_pool/: thread_pool.cpp  thread_pool.h  thread_pool.hpp  thread_worker.cpp  thread_worker.h
src/engine/thread_pool/test/: thread_pool_simple.h
src/plugins/: DebugLogger.h  debug_logger_component.h
src/project_definitions/: debug_mode_definitions.h  project_definitions.h  windows_definitions.h
